[tool.poetry]
name = "powerconfig"
version = "0.1.0"
description = ""
authors = ["CD Clark III <clifton.clark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pint = "^0.24"
fspathtree = "^0.9"
pyparsing = "^3.1.2"
numpy = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
